Addressing issue with footer and content overlap. Added a helper script to run a clean rebuild.

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 1160px) {
-  div.document, div.footer {
+  div.document {
     width: 1120px;
   }
 }
@@ -19,4 +19,15 @@ div.footer {
   left: 0;
   bottom: 0;
   height: 80px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+div.body p, div.body dd, div.body li, div.body blockquote {
+  -moz-hyphens: manual;
+  -ms-hyphens: manual;
+  -webkit-hyphens: manual;
+  hyphens: manual;
 }
